<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@id/action_menu_salvar"
        android:title="@string/salvar"
        android:orderInCategory="100"
        android:icon="@drawable/salvar"
        android:showAsAction="ifRoom|withText"
        app:showAsAction="always"></item>


    <item android:id="@id/action_menu_excluir"
        android:title="@string/excluir"
        android:orderInCategory="100"
        android:icon="@drawable/excluir"
        android:showAsAction="ifRoom|withText"
        app:showAsAction="always"></item>


    <item android:id="@id/action_menu_sair"

        android:title="@string/sair"
        android:orderInCategory="100"
        android:icon="@drawable/sair"
        android:showAsAction="never"
        android:checkable="false"></item>


</menu>